2001-11-18  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/ralloc.c (packRegsForHLUse3): Created and optimised.
	(packRegsForIYUse): Created and optimised.

2001-11-07  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/float.c (testFloatAdd): Fixed up warning.
2001-11-18  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/support/regression/tests/bug-460010.c: fix seg violation on host

	* sdcc/support/regression/tests/muldiv.c: fix output on mcs51

	* sdcc/support/regression/tests/stacks.c: fix DSEG overflow on mcs51

2001-11-07  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/sim/device/lib/_gptrget.c: mem region 5 (idata) added

	* sdcc/sim/device/lib/_gptrput.c: mem region 5 (idata) added

2001-11-07  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/sim/ucsim/globals.cc: New: IXRAM.

	* sdcc/sim/ucsim/stypes.h: New: IXRAM.

	* sdcc/sim/ucsim/s51.src/uc390.cc: New: IXRAM.

2001-11-07  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/ralloc.c (packRegsForHLUse): Banned IFXs from being packed into HL.
	(packRegsForHLUse): Added rule to pack address of/pointer get for itemps into HL for the Z80.
	(packRegsForAccUse2): Added rule to pack hbit IFXs into A.

	* src/z80/main.c (_setDefaultOptions): Made float code re-entrant by default.

	* src/z80/gen.c (aopGetLitWordLong): Added word support for floats.
	(genNotFloat): Added.
	(genUminusFloat): Added.

	* device/lib/z80/Makefile: Added floating pt stubs.

	* device/lib/Makefile.in (Z80SOURCES): Added floating pt support.

	* src/z80/gen.c (genIpush): Fixed up a push of one byte when left is in a pair.

	* device/lib/_fsadd.c (__fsadd): Fixed up return where the numbers are hugely different.

2001-11-07  Bernhard Held  <bernhard@bernhardheld.de>

	* sdcc/sim/ucsim/s51.src/glob.cc: Minor fix.

	* sdcc/sim/ucsim/s51.src/regs51.h: Minor fix.

	* sdcc/support/regression/Makefile: Add port ds390.

	* sdcc/support/regression/ports/mcs51/spec.mk: Minor change.
